src/output.css
/* ... */
:is(.dark .dark\:focus\:bg-white\/10:focus) {
  background-color: rgb(255 255 255 / 0.1);
}

:is(.dark .dark\:focus\:text-\[\#3b71ca\]:focus) {
  --tw-text-opacity: 1;
  color: rgb(59 113 202 / var(--tw-text-opacity));
}

:is(.dark .dark\:focus\:before\:shadow-\[0px_0px_0px_13px_rgba\(255\2c 255\2c 255\2c 0\.4\)\]:focus)::before {
  content: var(--tw-content);
  --tw-shadow: 0px 0px 0px 13px rgba(255,255,255,0.4);
  --tw-shadow-colored: 0px 0px 0px 13px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

:is(.dark .dark\:checked\:focus\:before\:shadow-\[0px_0px_0px_13px_\#3b71ca\]:focus:checked)::before {
  content: var(--tw-content);
  --tw-shadow: 0px 0px 0px 13px #3b71ca;
  --tw-shadow-colored: 0px 0px 0px 13px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

:is(.dark .dark\:active\:bg-white\/10:active) {
  background-color: rgb(255 255 255 / 0.1);
}

:is(.dark .group[data-te-datepicker-cell-current] .dark\:group-\[\[data-te-datepicker-cell-current\]\]\:border-white) {
  --tw-border-opacity: 1;
  border-color: rgb(255 255 255 / var(--tw-border-opacity));
}

:is(.dark .group:not([data-te-datepicker-cell-disabled]):not([data-te-datepicker-cell-selected]):hover .dark\:group-\[\:not\(\[data-te-datepicker-cell-disabled\]\)\:not\(\[data-te-datepicker-cell-selected\]\)\:hover\]\:bg-white\/10) {
  background-color: rgb(255 255 255 / 0.1);
}

:is(.dark .group:not([data-te-datepicker-cell-selected])[data-te-datepicker-cell-focused] .dark\:group-\[\:not\(\[data-te-datepicker-cell-selected\]\)\[data-te-datepicker-cell-focused\]\]\:bg-white\/10) {
  background-color: rgb(255 255 255 / 0.1);
}

:is(.dark .group[data-te-datepicker-cell-disabled] .dark\:group-\[\[data-te-datepicker-cell-disabled\]\]\:text-neutral-500) {
  --tw-text-opacity: 1;
  color: rgb(115 115 115 / var(--tw-text-opacity));
}

:is(.dark .peer:focus ~ .dark\:peer-focus\:text-gray-200) {
  --tw-text-opacity: 1;
  color: rgb(229 231 235 / var(--tw-text-opacity));
}

:is(.dark .peer:focus ~ .dark\:peer-focus\:text-primary) {
  --tw-text-opacity: 1;
  color: rgb(63 43 86 / var(--tw-text-opacity));
}

:is(.dark .dark\:data-\[te-input-disabled\]\:bg-zinc-600[data-te-input-disabled]) {
  --tw-bg-opacity: 1;
  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
}

:is(.dark .dark\:data-\[te-input-multiple-active\]\:bg-white\/30[data-te-input-multiple-active]) {
  background-color: rgb(255 255 255 / 0.3);
}

:is(.dark .dark\:data-\[te-input-state-active\]\:bg-white\/30[data-te-input-state-active]) {
  background-color: rgb(255 255 255 / 0.3);
}

:is(.dark .dark\:data-\[te-select-option-selected\]\:data-\[te-input-state-active\]\:bg-white\/30[data-te-input-state-active][data-te-select-option-selected]) {
  background-color: rgb(255 255 255 / 0.3);
}

:is(.dark .dark\:data-\[te-select-option-disabled\]\:text-gray-400[data-te-select-option-disabled]) {
  --tw-text-opacity: 1;
  color: rgb(156 163 175 / var(--tw-text-opacity));
}

@media (max-width: 419px) {
  .xsm\:ml-0 {
    margin-left: 0px;
  }

  .xsm\:hidden {
    display: none;
  }
}

.\[\&\.ps--clicking\]\:bg-\[\#eee\].ps--clicking {
  --tw-bg-opacity: 1;
  background-color: rgb(238 238 238 / var(--tw-bg-opacity));
}

.\[\&\.ps--clicking\]\:\!opacity-90.ps--clicking {
  opacity: 0.9 !important;
}

.\[\&\:\:-webkit-scrollbar-button\]\:block::-webkit-scrollbar-button {
  display: block;
}

.\[\&\:\:-webkit-scrollbar-button\]\:h-0::-webkit-scrollbar-button {
  height: 0px;
}

.\[\&\:\:-webkit-scrollbar-button\]\:bg-transparent::-webkit-scrollbar-button {
  background-color: transparent;
}

.\[\&\:\:-webkit-scrollbar-thumb\]\:h-\[50px\]::-webkit-scrollbar-thumb {
  height: 50px;
}

.\[\&\:\:-webkit-scrollbar-thumb\]\:rounded::-webkit-scrollbar-thumb {
  border-radius: 0.25rem;
}

.\[\&\:\:-webkit-scrollbar-thumb\]\:bg-\[\#999\]::-webkit-scrollbar-thumb {
  --tw-bg-opacity: 1;
  background-color: rgb(153 153 153 / var(--tw-bg-opacity));
}

.\[\&\:\:-webkit-scrollbar-track-piece\]\:rounded-none::-webkit-scrollbar-track-piece {
  border-radius: 0px;
}

.\[\&\:\:-webkit-scrollbar-track-piece\]\:rounded-l::-webkit-scrollbar-track-piece {
  border-top-left-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.\[\&\:\:-webkit-scrollbar-track-piece\]\:bg-transparent::-webkit-scrollbar-track-piece {
  background-color: transparent;
}

.\[\&\:\:-webkit-scrollbar\]\:h-1::-webkit-scrollbar {
  height: 0.25rem;
}

.\[\&\:\:-webkit-scrollbar\]\:w-1::-webkit-scrollbar {
  width: 0.25rem;
}

.\[\&\:not\(\[data-te-input-placeholder-active\]\)\]\:placeholder\:opacity-0:not([data-te-input-placeholder-active])::-moz-placeholder {
  opacity: 0;
}

.\[\&\:not\(\[data-te-input-placeholder-active\]\)\]\:placeholder\:opacity-0:not([data-te-input-placeholder-active])::placeholder {
  opacity: 0;
}

.hover\:\[\&\:not\(\[data-te-select-option-disabled\]\)\]\:bg-black\/5:not([data-te-select-option-disabled]):hover {
  background-color: rgb(0 0 0 / 0.05);
}

:is(.dark .dark\:hover\:\[\&\:not\(\[data-te-select-option-disabled\]\)\]\:bg-white\/30:not([data-te-select-option-disabled]):hover) {
  background-color: rgb(255 255 255 / 0.3);
}

.\[\&\>svg\]\:mx-auto>svg {
  margin-left: auto;
  margin-right: auto;
}

.\[\&\>svg\]\:h-4>svg {
  height: 1rem;
}

.\[\&\>svg\]\:h-5>svg {
  height: 1.25rem;
}

.\[\&\>svg\]\:w-10>svg {
  width: 2.5rem;
}

.\[\&\>svg\]\:w-4>svg {
  width: 1rem;
}

.\[\&\>svg\]\:w-5>svg {
  width: 1.25rem;
}

.\[\&\>svg\]\:w-7>svg {
  width: 1.75rem;
}

.\[\&\>svg\]\:rotate-180>svg {
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.\[\&\>svg\]\:fill-neutral-500>svg {
  fill: #737373;
}
/* ... */

